--- a/style.css
+++ b/style.css
@@ -381,6 +381,11 @@ menu{
     color: var(--color-gray-0);
 }
 
+.pro-act{
+    background-color: var(--color-primary);
+    color: var(--color-gray-0);
+}
+
 .projects-card{
     display: grid;
     gap: 20px;
@@ -424,6 +429,8 @@ menu{
 .pro-link i:hover{
     background-color: var(--color-gray-0);
 }
+
+
 
 /* =============================== testimonial ============================= */
 
@@ -511,6 +518,7 @@ menu{
     margin-bottom: 80px;
     border-radius: 10px;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .faq-head{
@@ -578,6 +586,7 @@ form{
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    color: var(--color-gray-0);
 }
 
 .form-icons{
@@ -611,6 +620,7 @@ input{
     padding: 15px;
     border-radius: 10px;
     width: 300%;
+    color: var(--color-gray-900);
 }
 
 textarea{
@@ -622,6 +632,7 @@ textarea{
     background-color: var(--color-gray-0);
     padding: 15px;
     border-radius: 10px;
+    color: var(--color-gray-900);
 }
 
 button[type="submit"]{
@@ -633,7 +644,10 @@ button[type="submit"]{
     background-color: var(--color-primary);
     color: var(--color-gray-0);
     margin-bottom: 100px;
+    border: none;
+    outline: none;
 }
+
 
 
 
